--- a/Editor/dev.jetees.memoryoptimizer.Editor.asmdef
+++ b/Editor/dev.jetees.memoryoptimizer.Editor.asmdef
@@ -1,11 +1,11 @@
 {
-  "name": "dev.sleightly.template.Editor",
+  "name": "dev.jetees.memoryoptimizer.Editor",
   "references": [
     "VRC.SDK3A",
     "VRC.SDK3A.Editor",
     "VRC.SDKBase",
     "VRC.SDKBase.Editor",
-    "dev.sleightly.template"
+    "dev.jetees.memoryoptimizer"
   ],
   "includePlatforms": [
       "Editor"
